kustomize/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: manipulacija
  labels:
    app: manipulacija
spec:
  replicas: 1
  selector:
    matchLabels:
      app: manipulacija
  template:
    metadata:
      labels:
        app: manipulacija
    spec:
      securityContext:
        fsGroup: 1000
      volumes:
        - name: manipulacija-storage
          emptyDir: {}
      containers:
        - name: manipulacija-backend
          image: manipulacija-backend
          volumeMounts:
            - name: manipulacija-storage
              mountPath: /storage
          command:
            - gunicorn
            - manipulacija.wsgi:application
            - -b
            - 0.0.0.0:8000
            - --log-level
            - DEBUG
            - --workers
            - "1"
            - --threads
            - "3"
            - --timeout
            - "90"
          ports:
            - containerPort: 8000
          resources:
            requests:
              memory: 400Mi
              cpu: 200m
            limits:
              memory: 800Mi
              cpu: 400m
        - name: manipulacija-frontend
          image: manipulacija-frontend
          volumeMounts:
            - name: manipulacija-storage
              mountPath: /usr/share/nginx/html/backend-storage
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: 50Mi
              cpu: 50m
            limits:
              memory: 50Mi
              cpu: 50m
