kustomize/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: manipulacija
spec:
  selector:
    app: manipulacija
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: manipulacija-frontend
spec:
  selector:
    app: manipulacija
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
